# misaxx-segment-cells

./: CMakeLists.txt  README.md
include/misaxx-segment-cells/: module.h  module_info.h  module_interface.h
include/misaxx-segment-cells/attachments/: conidia_count.h
src/: main.cpp
src/misaxx-segment-cells/: module.cpp  module_info.cpp  module_interface.cpp
src/misaxx-segment-cells/algorithms/: quantify_conidia.cpp  quantify_conidia.h  segment_experiment.cpp  segment_experiment.h
src/misaxx-segment-cells/attachments/: conidia_count.cpp
